deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: totallylegitco
  labels:
    app: fight-health-insurance
spec:
  replicas: 7
  selector:
    matchLabels:
      app: fight-health-insurance
  template:
    metadata:
      labels:
        app: fight-health-insurance
        group: fight-health-insurance-webbackend
    spec:
      topologySpreadConstraints:
      - maxSkew: 2
        topologyKey: kubernetes.io/hostname
        whenUnsatisfiable: ScheduleAnyway
        labelSelector:
          matchLabels:
            app: fight-health-insurance
      serviceAccountName: "tailscale"
      containers:
        - image: holdenk/fight-health-insurance:v0.6.1b
          name: totallylegitco
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              name: web
          volumeMounts:
            - name: uploads
              mountPath: /external_data
          livenessProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: "www.fighthealthinsurance.com"
              path: /
              port: 80
            periodSeconds: 180
          startupProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: "www.fighthealthinsurance.com"
              path: /
              port: 80
            periodSeconds: 10
            failureThreshold: 45
        - name: ts-sidecar
          image: "ghcr.io/tailscale/tailscale:latest"
      volumes:
        - name: uploads
          persistentVolumeClaim:
            claimName: uploads
---
apiVersion: v1
kind: Service
metadata:
  labels:
    group: fight-health-insurance
  name: web-svc
  namespace: totallylegitco
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: web
  selector:
    group: fight-health-insurance-webbackend
  sessionAffinity: None
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fight-health-insurance-ingress
  namespace: totallylegitco
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/issue-temporary-certificate: "true"
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/renew-before: "20d"
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
    nginx.ingress.kubernetes.io/session-cookie-max-age: "30000"
    nginx.ingress.kubernetes.io/proxy-body-size: 80m
spec:
  ingressClassName: nginx
  tls:
  - hosts:
      - www.fighthealthinsurance.com
      - fighthealthinsurance.com
      - www.fuckhealthinsurance.com
      - www.appealhealthinsurance.com
    secretName: combined-tls-secret
  rules:
    - host: www.fuckhealthinsurance.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  web-svc
                port:
                  number: 80
    - host: fuckhealthinsurance.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  web-svc
                port:
                  number: 80
    - host: www.appealhealthinsurance.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  web-svc
                port:
                  number: 80
    - host: www.fighthealthinsurance.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  web-svc
                port:
                  number: 80
    - host: fighthealthinsurance.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  web-svc
                port:
                  number: 80
